<resources>
    <string name="app_name">SendMessage</string>
    <string name="etMessageText" />
    <string name="etMessageHint">Escribe Un mensaje...</string>
    <string name="btSend">Enviar</string>
    <string name="etUserHint">Introduce tu nombre</string>
    <string name="tvUserHint">El usuario</string>
    <string name="tvMessageHint"></string>
    <string name="tvMessageText">Ha escrito el mensaje</string>
    <string name="tvMessageHintText"></string>
    <string name="tvMessageTextText" />
    <string name="tvMessageHintFinal" />
    <string name="tvMessageTextFinal" />
    <string name="imgMessage">Imagen contiene dos mensajes</string>
    <string name="aboutUs">Sobre nosotros</string>
    <string name="aboutUsName">Sobre nosotros</string>
    <string name="AboutName">Juan jose lago sanchez</string>
    <string name="aboutUsTitle">AboutUs</string>
    <string name="aboutUsInfo">Me gusta la informatica</string>


</resources>