<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="message"
            type="com.example.sendmessageBinding.data.Message" />
    </data>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SendMessageActivity">

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@{message.user.name}"
        android:layout_marginTop="@dimen/etUserMarginTop"
        android:autofillHints=""
        android:hint="@string/etUserHint"
        android:minHeight="@dimen/etUserMinHeight"
        android:textColorHint="@color/etUserColorHint" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="@dimen/etMessageMarginTop"
        android:autofillHints=""
        android:hint="@string/etMessageHint"
        android:minHeight="@dimen/etMessageMinHeight"
        android:text="@={message.content}"
        android:textColorHint="@color/etMessageColorHint" />

    <Button
        android:onClick="sendMessage"
        android:id="@+id/btSend"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/btSendMessageTop"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btSend" />

</LinearLayout>
    </layout>